# django_tutorial

./: .gitignore  README.md  pyproject.toml
djangotutorial/: db.sqlite3
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/polls/: models.py  tests.py  views.py
djangotutorial/polls/migrations/: 0001_initial.py  0002_rename_questions_choice_question.py
