[project]
name = "django-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
ignore = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["myapp"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]



